Fix z-index of Alert, Modal

--- a/css/component/modal.css
+++ b/css/component/modal.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%; 
     height: 100%; 
-    z-index: 100;
+    z-index: 400;
     background-color: rgba(0,0,0,.4);
 }
 #vp_multiButtonModal .vp-multi-button-modal-box {
